mailslurper/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailslurper
  labels:
    app: mailslurper
spec:
  type: ClusterIP
  ports:
    - name: ui
      protocol: TCP
      port: 4436
      targetPort: ui
    - name: api
      protocol: TCP
      port: 4437
      targetPort: api
    - name: smtp
      protocol: TCP
      port: 1025
      targetPort: smtp
  selector:
    app: mailslurper
