mailslurper/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailslurper
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mail.outi.ir
      secretName: mailslurper-tls
  rules:
    - host: mail.outi.ir
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mailslurper
                port:
                  name: ui
